<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="package_name">com.muje.parcel</string>
    <string name="free_package_name">com.muje.parcel.free</string>

    <string name="app_name">Parcel Track</string>
    <string name="hello_world">Hello world!</string>
    <string name="comma">,\u0020</string>
    <string name="hour">\u0020hour</string>
    <string name="invalid">Not found!</string>
    <string name="item_delivered">\u0020item delivered</string>
    <string name="are_you_sure">Are you sure?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="processing">Processing</string>
    <string name="wait_title">Please wait</string>
    <string name="processing_content">Retrieving data...</string>
    <string name="email_title">Sending email</string>

    <string name="action_open_link">Open in Browser</string>
    <string name="action_share">Share</string>
    <string name="share_message" formatted="false">Check item %s at %s --ParcelTrack</string>
    <string name="action_annotate">Add Label</string>
    <string name="annotation_title">Add Label</string>
    <string name="annotation_summary">Please enter your label</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="action_export">Export All &amp; Send</string>
    <string name="action_update_all">Refresh All</string>
    <string name="action_clear_all">Clear History</string>
    <string name="action_settings">Settings</string>

    <string name="pref_notification">Notification</string>
    <string name="notification_hour">Hour</string>
    <string name="notification_hour_title">Interval Time</string>
    <string name="notification_title">Enable</string>
    <string name="notification_summary">Auto update pending item every interval time</string>
    <string name="title_activity_about">About</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="contact_email">yancyn@gmail.com</string>
    <string name="version">Version</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_title">Upgrade</string>
    <string name="upgrade_summary">Upgrade to premium version to remove advertisement and enjoy additional features!</string>
    <string name="upgrade_prompt">Please upgrade to use this feature.</string>
    <string name="error_title">Report Error</string>
    <string name="error_summary">Report error found or any suggestion</string>
    <string name="email_subject">Parcel History</string>

    <string-array name="carriers">
        <item></item>
        <item>CityLink</item>
        <item>FedEx</item>
        <item>GDex</item>
        <item>Poslaju</item>
        <item>Skynet</item>
        <item>UPS</item>
    </string-array>

</resources>
