<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_export"
        android:visible="false"
        android:title="@string/action_export"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item android:id="@+id/action_update_all"
        android:title="@string/action_update_all"
        android:orderInCategory="20"
        app:showAsAction="never" />
    <item android:id="@+id/action_clear_all"
        android:title="@string/action_clear_all"
        android:orderInCategory="30"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
